router/routeriptables
[root@router linux]# cat /etc/sysconfig/iptables
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT -m comment --comment "Allow all ICMP"
-A INPUT -i lo -j ACCEPT -m comment --comment "Allow loopback"
-A INPUT -p tcp -s 192.168.0.31 -m state --state NEW -m tcp --dport 22 -j ACCEPT -m com                                                                                                                                                      ment --comment "Access to SSH only from admin IP"
-A INPUT -p tcp -s 192.168.3.5 --dport 10050 -j ACCEPT -m comment --comment "Allowed co                                                                                                                                                      nnection to Zabbix-agent port"
-A INPUT -p tcp -s 192.168.3.5 --dport 161 -j ACCEPT -m comment --comment "Allowed conn                                                                                                                                                      ection to Zabbix-snmp port"
-A INPUT -p udp -s 192.168.3.5 --dport 161 -j ACCEPT -m comment --comment "Allowed conn                                                                                                                                                      ection to Zabbix-snmp port"
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i ens38 -o ens37 -j ACCEPT -m comment --comment "Forward between 2 networks                                                                                                                                                      "
-A FORWARD -i ens37 -o ens38 -j ACCEPT -m comment --comment "Forward between 2 networks                                                                                                                                                      "
-A FORWARD -i ens39 -o ens37 -j ACCEPT -m comment --comment "Forward between 2 networks                                                                                                                                                      "
-A FORWARD -i ens37 -o ens39 -j ACCEPT -m comment --comment "Forward between 2 networks                                                                                                                                                      "
-A FORWARD -i ens39 -o ens38 -j ACCEPT -m comment --comment "Forward between 2 networks                                                                                                                                                      "
-A FORWARD -i ens38 -o ens39 -j ACCEPT -m comment --comment "Forward between 2 networks                                                                                                                                                      "
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
[root@router linux]#
